# OpenGL-Demo

./: .gitignore  CMakeLists.txt  main.cpp
Header/: Shader.h
Shaders/: fragmentShaderSource.glsl  vertexShaderSource.glsl  vertexShaderSource.vs
Source/: Shader.cpp
